<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/container">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".TriviaGameFragment"
        android:id="@+id/fl_main">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".QuestionActivity">

            <ImageView
                android:id="@+id/iv_first"
                android:layout_width="33dp"
                android:layout_height="24dp"
                android:layout_marginEnd="20dp"
                android:contentDescription="@string/content_description"
                android:src="@drawable/checkmark"
                app:layout_constraintBottom_toBottomOf="@+id/btn_first_answer"
                app:layout_constraintEnd_toEndOf="@+id/btn_first_answer"
                app:layout_constraintTop_toTopOf="@+id/btn_first_answer"
                app:layout_constraintVertical_bias="0.45" />

            <ImageView
                android:id="@+id/iv_second"
                android:layout_width="33dp"
                android:layout_height="24dp"
                android:layout_marginEnd="20dp"
                android:contentDescription="@string/content_description"
                android:src="@drawable/checkmark"
                app:layout_constraintBottom_toBottomOf="@+id/btn_second_answer"
                app:layout_constraintEnd_toEndOf="@+id/btn_second_answer"
                app:layout_constraintTop_toTopOf="@+id/btn_second_answer" />

            <ImageView
                android:id="@+id/iv_third"
                android:layout_width="33dp"
                android:layout_height="24dp"
                android:layout_marginEnd="20dp"
                android:contentDescription="@string/content_description"
                android:src="@drawable/checkmark"
                app:layout_constraintBottom_toBottomOf="@+id/btn_third_answer"
                app:layout_constraintEnd_toEndOf="@+id/btn_third_answer"
                app:layout_constraintTop_toTopOf="@+id/btn_third_answer" />

            <ImageView
                android:id="@+id/iv_fourth"
                android:layout_width="33dp"
                android:layout_height="24dp"
                android:layout_marginEnd="20dp"
                android:contentDescription="@string/content_description"
                android:src="@drawable/checkmark"
                app:layout_constraintBottom_toBottomOf="@+id/btn_fourth_answer"
                app:layout_constraintEnd_toEndOf="@+id/btn_fourth_answer"
                app:layout_constraintTop_toTopOf="@+id/btn_fourth_answer" />

            <ProgressBar
                android:id="@+id/progressBarToday"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="72dp"
                android:layout_marginEnd="8dp"
                android:indeterminate="false"
                android:max="20"
                android:progress="19"
                android:progressDrawable="@drawable/circular_progress_bar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:text="@string/question"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/progressBarToday" />

            <Button
                android:id="@+id/btn_first_answer"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="16dp"
                android:background="@color/colorRed"
                android:onClick="gameOnClick"
                android:text="@string/first_answer"
                android:textColor="@color/textColor"
                app:layout_constraintBottom_toTopOf="@+id/btn_second_answer"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/btn_second_answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="16dp"
                android:background="@color/colorBlue"
                android:onClick="gameOnClick"
                android:text="@string/second_answer"
                android:textColor="@color/textColor"
                app:layout_constraintBottom_toTopOf="@+id/btn_third_answer"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/btn_third_answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="16dp"
                android:background="@color/colorOrange"
                android:onClick="gameOnClick"
                android:text="@string/third_answer"
                android:textColor="@color/textColor"
                app:layout_constraintBottom_toTopOf="@+id/btn_fourth_answer"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/btn_fourth_answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="16dp"
                android:background="@color/colorGreen"
                android:onClick="gameOnClick"
                android:text="@string/fourth_answer"
                android:textColor="@color/textColor"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tv_remaining_time"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:gravity="center"
                android:text="@string/initial_value"
                android:textSize="36sp"
                app:layout_constraintBottom_toBottomOf="@+id/progressBarToday"
                app:layout_constraintEnd_toEndOf="@+id/progressBarToday"
                app:layout_constraintStart_toStartOf="@+id/progressBarToday"
                app:layout_constraintTop_toTopOf="@+id/progressBarToday"
                app:layout_constraintVertical_bias="0.52" />

            <TextView
                android:id="@+id/tv_number_of_answers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/zero"
                android:textSize="36sp"
                app:layout_constraintStart_toEndOf="@+id/iv_answered_icon"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/iv_answered_icon"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_baseline_done_all_24px"
                android:contentDescription="@string/description_answers"/>

            <ImageView
                android:id="@+id/iv_ranking_icon"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="64dp"
                android:contentDescription="@string/description_ranking"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_baseline_equalizer_24px" />

            <TextView
                android:id="@+id/tv_ranking"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/question_mark"
                android:textSize="36sp"
                app:layout_constraintStart_toEndOf="@+id/iv_ranking_icon"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_answered"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/description_answers"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_answered_icon" />

            <TextView
                android:id="@+id/tv_ranking_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/description_ranking"
                app:layout_constraintStart_toStartOf="@+id/iv_ranking_icon"
                app:layout_constraintTop_toBottomOf="@+id/iv_ranking_icon" />

        </android.support.constraint.ConstraintLayout>

    </FrameLayout>

    <ProgressBar
        android:id="@+id/pb_wait_connect"
        style="?android:attr/progressBarStyle"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>